[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dhruv13x"
version = "3.0.0"

description = "Dhruv's complete meta tooling suite — installs all utilities in one package."
readme = "README.md"
requires-python = ">=3.11"

author = "dhruv13x"
author_email = "dhruv13x@gmail.com"

authors = [
  { name = "dhruv13x", email = "dhruv13x@gmail.com" }
]

license = { text = "MIT © dhruv13x" }

classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Build Tools",
]

# ✅ All your published packages — direct dependencies
dependencies = [
  "autoheader",
  "create-dump",
  "dhruv",
  "duplifinder",
  "enterprise-docs",
  "geminiai-cli",
  "import-surgeon",
  "importdoc",
  "jules-cli",
  "project-vault",
  "pyinitgen",
  "pypurge",
  "relm",
  "routine-workflow",
  "termux-dev-setup",
  "vault-check",
  
  # Your local extras you listed earlier:
  "projectrestore",
  "projectclone"
]

[project.urls]
Homepage = "https://pypi.org/project/dhruv13x/"
Source   = "https://github.com/dhruv13x/dhruv13x"
Issues   = "https://github.com/dhruv13x/dhruv13x/issues"

[project.scripts]
dhruv13x = "dhruv13x.cli:run"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "black>=24.3.0",
  "mypy>=1.11.0",
  "coverage>=7.5.0",
  "pytest-cov",
  "hypothesis>=6.100.0",
  "pytest-asyncio>=0.21.0",
  "pytest-mock>=3.10.0",
  "pytest-timeout>=2.3.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/dhruv13x"]



[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 95
show_missing = true

[tool.pytest.ini_options]
pythonpath = "src"
timeout = 10
testpaths = ["tests"]
addopts = [
  "-ra",
  "--strict-config",
  "--strict-markers"
]
